name:           wai-gateway
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/colehaus/wai-gateway#readme>
homepage:       https://github.com/colehaus/wai-gateway#readme
bug-reports:    https://github.com/colehaus/wai-gateway/issues
author:         Cole Haus
maintainer:     colehaus@cryptolab.net
copyright:      2018 Cole Haus
license:        MIT
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md,
    package.json,
    serverless.yaml

source-repository head
  type: git
  location: https://github.com/colehaus/wai-gateway

library
  exposed-modules:
      AWSLambda.Events.APIGateway.Wai
      AWSLambda.Events.APIGateway.Wai.Internal
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , bytestring
    , http-types
    , lens
    , network
    , serverless-haskell
    , text
    , wai
  default-language: Haskell2010

executable wai-gateway-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , convertible
    , http-types
    , serverless-haskell
    , text
    , wai
    , wai-gateway
    , warp
  default-language: Haskell2010
